@@ -2,6 +2,7 @@ Noteworthy changes in release ?.?? (????-??-??)
 ===============================================
 
 * Improvements
+  * Implemented printing of Unix socket sun_path field's SELinux context.
 
 * Bug fixes
 
